test/errors/error14(2).sp
% t contains an undefined record.
sorts
#s={f(a)}.
predicates
p(#s).
rules
p(g(X)).

